# patata_caliente

./: Cargo.toml
client/: Cargo.toml  main.rs
client/src/: handler.rs  main.rs  target_strategy.rs
common/: Cargo.toml
common/src/: challenge.rs  domain.rs  lib.rs  message.rs  utils.rs
common/src/challenge/: md5_hashcash.rs  mod.rs  monstrous_maze.rs  monstruous_maze.rs
common/src/challenge/md5_hashcash/: md5_hashcash_challenge.rs  mod.rs
server/src/: main.rs
