[package]
name = "patata_caliente"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "./client/main.rs"

[dependencies]
common = { path="./common" }
serde = { version="1.0.137", features=["derive"] }
serde_json = "1"
rand = "0.8.5"